netpol-connectivity-analyzer/environment/manifests/api/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: api
spec:
  selector:
    app: orders
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: api
spec:
  selector:
    app: users
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-svc
  namespace: api
spec:
  selector:
    app: analytics
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
